@@ -17,6 +17,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
 */
 
+#if defined(__CYGWIN__) && !defined(CYGWIN_USE_PIPES)
+#undef WIN32 // Avoids "unqualified id" problem with std::max() etc
+#endif
+
 #include "JackDebugClient.h"
 #include "JackEngineControl.h"
 #include "JackException.h"
@@ -333,7 +337,7 @@ int JackDebugClient::SetFreeWheel(int onoff)
          *fStream << "!!! ERROR !!! : Freewheel setup seems incorrect : set = ON while FW is already ON " << endl;
     if (!onoff && !fFreewheel)
          *fStream << "!!! ERROR !!! : Freewheel setup seems incorrect : set = OFF while FW is already OFF " << endl;
-    fFreewheel = onoff;
+    fFreewheel = onoff ? true : false;
     return fClient->SetFreeWheel(onoff);
 }
 
