@@ -20,13 +20,14 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #ifndef __jack_systemdeps_h__
 #define __jack_systemdeps_h__
 
-#ifdef WIN32
+#if defined(WIN32) && !defined(__CYGWIN__) && !defined(GNU_WIN32)
 
 #include <windows.h>
 
 #ifdef _MSC_VER     /* Microsoft compiler */
     #define __inline__ inline
-    #ifndef int8_t
+    #if (!defined(int8_t) && !defined(_STDINT_H))
+        #define __int8_t_defined
         typedef char int8_t;
         typedef unsigned char uint8_t;
         typedef short int16_t;
@@ -36,28 +37,39 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
         typedef LONGLONG int64_t;
         typedef ULONGLONG uint64_t;
     #endif
-    /**
-     *  to make jack API independent of different thread implementations,
-     *  we define jack_native_thread_t to HANDLE here.
-     */
-    typedef HANDLE jack_native_thread_t;
 #elif __MINGW32__   /* MINGW */
     #include <stdint.h>
     #include <sys/types.h>
-    /**
-     *  to make jack API independent of different thread implementations,
-     *  we define jack_native_thread_t to HANDLE here.
-     */
-    typedef HANDLE jack_native_thread_t;
 #else               /* other compilers ...*/
     #include <inttypes.h>
     #include <pthread.h>
     #include <sys/types.h>
 #endif
 
-#endif /* WIN32 */
+#if !defined(_PTHREAD_H) && !defined(PTHREAD_WIN32)
+    /**
+     *  to make jack API independent of different thread implementations,
+     *  we define jack_native_thread_t to HANDLE here.
+     */
+    typedef HANDLE jack_native_thread_t;
+#else
+    #ifdef PTHREAD_WIN32            // Added by JE - 10-10-2011
+        #include <ptw32/pthread.h>  // Makes sure we #include the ptw32 version !
+    #endif
+    /**
+     *  to make jack API independent of different thread implementations,
+     *  we define jack_native_thread_t to pthread_t here.
+     */
+    typedef pthread_t jack_native_thread_t;
+#endif
 
-#if defined(__APPLE__) || defined(__linux__) || defined(__sun__) || defined(sun) || defined(__unix__)
+#endif // WIN32 && !__CYGWIN__ && !GNU_WIN32 */
+
+#if defined(__APPLE__) || defined(__linux__) || defined(__sun__) || defined(sun) || defined(__unix__) || defined(__CYGWIN__) || defined(GNU_WIN32)
+
+#if defined(__CYGWIN__) || defined(GNU_WIN32)
+    #include <stdint.h>
+#endif
     #include <inttypes.h>
     #include <pthread.h>
     #include <sys/types.h>
