@@ -38,7 +38,8 @@ John Emmas
 
 2011-11-07 Stephane Letz  <letz@grame.fr>
 
-	* John Emmas auto-launch server on WIndows patch.
+	* John Emmas first auto-launch server on Windows patch.
+	* John Emmas second auto-launch server on Windows patch.
 
 2011-11-06 Stephane Letz  <letz@grame.fr>
 
